# snow-os

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.config  README  README.md  README.txt  smunjal.iso  test.sbush
crt/: crt1.c  ps.c
include/: dirent.h  signal.h  stdio.h  stdlib.h  string.h  unistd.h
include/sys/: ahci.h  defs.h  elf64.h  interrupt.h  io.h  keyboard.h  kprintf.h  kthread.h  paging.h  physical_memory.h  pic.h  pit.h  process.h  sleep.h  string.h  syscall_codes.h  tarfs.h  terminal.h  vfs.h
libc/: chdir.c  close.c  closedir.c  execvpe.c  exit.c  fork.c  free.c  getcwd.c  getpid.c  getppid.c  gets.c  kill.c  malloc.c  open.c  opendir.c  printf.c  ps.c  putchar.c  puts.c  read.c  readdir.c  sleep.c  string.c  syscall_wrapper.c  wait.c  waitpid.c  write.c  yield.c
rootfs/boot/kernel/: kernel
rootfs/etc/: rc  stress_test.sbush  test.sbush  test.txt
sys/: defs.c  elf.c  elf64.c  gdt.c  idt.s  interrupt.c  interrupt.s  io.c  keyboard.c  keyboard_isr.s  kprintf.c  kthread.c  kthread.s  libc.c  libc.s  linker.script  main.c  page_fault_isr.s  paging.c  physical_memory.c  pic.c  pit.c  pit.s  pit_isr.s  process.c  ring3.s  sleep.c  string.c  syscalls.c  syscalls.s  tarfs.c  terminal.c  vfs.c
