cmake_minimum_required(VERSION 3.8)
project(snow_os)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        bin/cat/cat.c
        bin/ls/ls.c
        bin/sbush/sbush.c
        crt/crt1.c
        include/sys/ahci.h
        include/sys/defs.h
        include/sys/elf64.h
        include/sys/gdt.h
        include/sys/kprintf.h
        include/sys/tarfs.h
        include/dirent.h
        include/fcntl.h
        include/signal.h
        include/stdarg.h
        include/stdio.h
        include/stdlib.h
        include/string.h
        include/unistd.h
        libc/chdir.c
        libc/close.c
        libc/dup2.c
        libc/execve.c
        libc/exit.c
        libc/fork.c
        libc/getcwd.c
        libc/malloc.c
        libc/mmap.c
        libc/open.c
        libc/pipe.c
        libc/putchar.c
        libc/puts.c
        libc/read.c
        libc/strcat.c
        libc/strcmp.c
        libc/strlen.c
        libc/waitpid.c
        libc/write.c
        rootfs/boot/defaults/loader.conf
        rootfs/boot/beastie.4th
        rootfs/boot/boot
        rootfs/boot/boot0
        rootfs/boot/boot1
        rootfs/boot/boot2
        rootfs/boot/cdboot
        rootfs/boot/gptboot
        rootfs/boot/loader
        rootfs/boot/loader.4th
        rootfs/boot/loader.conf
        rootfs/boot/loader.rc
        rootfs/boot/mbr
        rootfs/boot/pxeboot
        rootfs/boot/screen.4th
        rootfs/boot/support.4th
        rootfs/boot/syslinux.cfg
        sys/gdt.c
        sys/gdt.s
        sys/kprintf.c
        sys/linker.script
        sys/main.c
        LICENSE
        Makefile
        Makefile.config
        README
        test
        test.sbush)

add_executable(snow_os ${SOURCE_FILES})